# xoisc

./: README.md  xoisc.cabal
examples/: multiply.xoisc  prime.xoisc
src/: Main.hs
