name:                xoisc
version:             0.1.0.0
synopsis:            a functional OISC based on Fokker's X combinator
homepage:            https://github.com/bforte/xoisc#readme
license:             BSD3
author:              BMO
copyright:           2018 BMO
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable xoisc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl, parsec
